# AI-powered-Job-recommendation-System

./: .dockerignore  .env  .env.example  .updated  ARCHITECTURE.md  CHECKLIST.md  CI_CD_GUIDE.md  Dockerfile  GETTING_STARTED.md  PLATFORM_COMPARISON.md  QUICKSTART.md  README.md  START_HERE.md  SUMMARY.md  TROUBLESHOOTING.md  WHATS_NEXT.md  app.py  mcp_server.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
src/: helper.py  job_api.py
