[project]
name = "job-recommeder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=1.1.2",
    "mcp[cli]>=1.27.0",
    "openai>=2.31.0",
    "pymupdf>=1.27.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "streamlit>=1.56.0",
]
